--- a/components/wincon.css
+++ b/components/wincon.css
@@ -180,3 +180,50 @@ a:hover {
     transition: all 0.6s ease 0s;
     margin-right: 15px;
 }
+/*#imageContainer {
+    display: flex;
+    flex-wrap: wrap;
+}*/
+
+
+
+#imageContainer {
+   /* Prevent vertical gaps */
+   line-height: 0;
+   
+   -webkit-column-count: 4;
+   -webkit-column-gap:   0px;
+   -moz-column-count:    4;
+   -moz-column-gap:      0px;
+   column-count:         4;
+   column-gap:           0px;
+}
+
+@media (max-width: 1200px) {
+  #imageContainer {
+  -moz-column-count:    3;
+  -webkit-column-count: 3;
+  column-count:         3;
+  }
+}
+@media (max-width: 1000px) {
+  #imageContainer {
+  -moz-column-count:    3;
+  -webkit-column-count: 3;
+  column-count:         3;
+  }
+}
+@media (max-width: 800px) {
+  #imageContainer {
+  -moz-column-count:    2;
+  -webkit-column-count: 2;
+  column-count:         2;
+  }
+}
+@media (max-width: 400px) {
+  #imageContainer {
+  -moz-column-count:    1;
+  -webkit-column-count: 1;
+  column-count:         1;
+  }
+}
