--- a/components/home.css
+++ b/components/home.css
@@ -46,7 +46,7 @@
     float: right;
 }
 .galleryimg {
-    margin: 10px 10px;
+    margin: 3.5px 2.5px;
 }
 .gallery-content {
     margin-top: 15px;
@@ -105,6 +105,7 @@
     width: 100%;
     position: absolute;
     border: 5px solid grey;
+    padding: 0px;
 }
 
 /* The Modal (background) */
