--- a/components/spic.css
+++ b/components/spic.css
@@ -5,7 +5,9 @@ p {
 #myBtn {
   display: none;
   position: fixed;
-  right: 50%;
+  right: 0;
+  left: 0;
+  margin: auto;
   bottom: 5%;
   z-index: 9;
   border: none;
