--- a/components/spic.css
+++ b/components/spic.css
@@ -17,6 +17,8 @@ p {
   cursor: pointer;
   padding: 15px;
   border-radius: 40px 0px;
+  display: inline-block;
+  width: 60px;
 }
 .modal-backdrop {
   z-index: 0;
