--- a/components/spic.css
+++ b/components/spic.css
@@ -9,7 +9,7 @@ p {
   left: 0;
   margin: auto;
   bottom: 5%;
-  z-index: 9;
+  z-index: 20;
   border: none;
   outline: none;
   background-color: #4d3300;
@@ -17,7 +17,6 @@ p {
   cursor: pointer;
   padding: 15px;
   border-radius: 40px 0px;
-  display: inline-block;
   width: 60px;
 }
 .modal-backdrop {
@@ -25,6 +24,7 @@ p {
 }
 #myBtn:hover {
   background-color: #555;
+  display: block;
 }
 body {
   background-color: #ffffcc;
