--- a/components/spic.css
+++ b/components/spic.css
@@ -33,7 +33,7 @@ body {
   font-weight: 500;
 
   min-width: 500px;
-  width: -moz-min-content;
+  width: auto !important;
 }
 body.modal-open {
   padding-right: 0px !important;
